# switchlight

./: .gitignore  README.md  TEAM_CONTEXT.md  pyproject.toml
configs/: b1_full.yaml  b2_retry_vgg01.yaml  dummy.yaml
data/: brdf_lut.pt
data/blender/: pack_bundle.py  render_smoke.py
data/blender/elena_test/: meta.json
data/blender/smoke_test/: meta.json
eval/: inspect_bundle.py  metrics.py  visualize.py
inverse/: dsine_wrapper.py  intrinsic_wrapper.py  io_utils.py  matting.py
refine/: README.md  dataset.py  losses.py  unet.py
render/: cache.py  cook_torrance.py  hdri.py
scripts/: batch_render.py  compare_to_blender.py  export_refine_results.py  extract_buffers.py  make_demo_grid.py  relight.py  setup_third_party.sh  test_brdf_lut.py  test_cubemap.py  test_diffuse_prefilter.py  test_metrics.py  test_specular_prefilter.py  test_sphere_render.py  train.py  visualize_hdri.py
tests/: test_inverse_smoke.py
