[project]
name = "switchlight"
version = "0.1.0"
description = "SwitchLight-inspired portrait relighting pipeline. COMP5405 group project."
requires-python = ">=3.10,<3.11"
dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    # Image I/O and processing
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    # HDR / EXR support
    "OpenEXR>=3.2.0",
    # Foreground matting
    "rembg>=2.0.50",
    "onnxruntime>=1.16.0",
    # Numerics
    "numpy>=1.24.0,<2.0.0",  # pinned <2 for compatibility with older deps
    "scipy>=1.11.0",
    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
train = [
    "lpips>=0.1.4",
    "pytorch-msssim>=1.0.0",
    "scikit-image>=0.22.0",
]
dev = [
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inverse", "render", "refine", "eval"]

[tool.ruff]
line-length = 100
target-version = "py310"
